syntax = "proto3";

import "google/protobuf/timestamp.proto";
option go_package = "github.com/boryashkin/language-api/internal/mediatext/grpc";

service MediaService {
    rpc FindMedia (FindMediaRequest) returns (FindMediaReply) {}
}
service LessonService {
    rpc CreateLesson (CreateLessonRequest) returns (CreateLessonReply) {}
}

// Keep in sync with /cmd/clientapp/nextjs/src/proto

message CreateLessonRequest {
    string name = 1;
    string slug = 2;
    string owner_id = 3;
}
message CreateLessonReply {
    string id = 1;
    string name = 2;
    string slug = 3;
    string owner_id = 4;
    google.protobuf.Timestamp created_at = 5;
}

message FindMediaRequest {
    string id = 1;
    string text = 2;
    string type = 3;
}
message FindMediaReply {
    repeated Media media = 1;
}
message Media {
    string id = 1; 
    string source_id = 2; 
    int32 sequence = 3;
    string original_lang = 4;
    string text = 5;
    string type = 6;
    string uri = 7;
    string uri_thumbnail = 8;
    google.protobuf.Timestamp created_at = 9;
}

//service MediaTextService {
//  rpc Find (FindMediaTextRequest) returns (FindMediaTextReply) {}
//}
// message FindMediaTextRequest {
//     string rule = 1;
//     string source_id = 2;
// }
// message FindMediaTextReply {
//     repeated MediaText texts = 1;
// }
// message MediaText {
//     string id = 1;
//     string text = 2;
//     map<string, TextPlacement> rule_placements = 3;
//     string source_id = 4;
//     Media media = 5;
//     google.protobuf.Timestamp created_at = 6;
// }
// message TextPlacement {
//     repeated int64 placement = 1;
// }